--- a/app/src/main/res/layout/activity_detail_news.xml
+++ b/app/src/main/res/layout/activity_detail_news.xml
@@ -5,17 +5,16 @@
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appBar"
-            style="@style/matchWrap"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            style="@style/matchWrap">
 
             <RelativeLayout
                 android:id="@+id/rl_group_toolbar_top"
                 android:layout_width="match_parent"
-                android:background="@color/backgroundAuth"
                 android:layout_height="230dp">
 
                 <ImageView
@@ -30,6 +29,12 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:background="@drawable/gradient_top" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/gradient_buttom" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -57,6 +62,7 @@
                         android:layout_toLeftOf="@+id/rippleSetting"
                         android:layout_toRightOf="@+id/rippleBack"
                         android:ellipsize="end"
+                        android:gravity="center"
                         android:maxLines="1"
                         android:textColor="@color/colorWhite"
                         android:textSize="16sp"
@@ -73,7 +79,7 @@
                             android:id="@+id/imgSetting"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_setting"
+                            android:src="@drawable/ic_share"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +87,27 @@
                     </haiphat.com.bds.nghetuvan.utils.RippleView>
                 </RelativeLayout>
 
+                <TextView
+                    android:id="@+id/tvName"
+                    style="@style/matchWrap"
+                    android:layout_above="@+id/tvTime"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="bất động sản phía tây hà nội"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tvTime"
+                    style="@style/matchWrap"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="30dp"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:text="thứ 6, 30/10/2018 | 10:00 GMT +7"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="10sp" />
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -96,8 +123,8 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 style="@style/matchWrap"
-                android:background="@color/colorWhite"
-                app:tabIndicatorColor="@color/colorPrimary"
+                android:background="@color/colorAccent"
+                app:tabIndicatorColor="@color/colorWhite"
                 app:tabMode="fixed"
                 app:tabTextAppearance="@style/DetailPressReleaseTabText" />
         </android.support.design.widget.AppBarLayout>
@@ -113,6 +140,6 @@
             style="@style/matchParent"
             android:background="@color/colorWhite"
             android:orientation="horizontal"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </android.support.design.widget.CoordinatorLayout>
 </layout>
