--- a/app/src/main/res/layout/item_news_detail_comment.xml
+++ b/app/src/main/res/layout/item_news_detail_comment.xml
@@ -22,35 +22,20 @@
             android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:ellipsize="end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:ellipsize="none"
             android:fontFamily="sans-serif"
             android:lineSpacingExtra="4sp"
-            android:maxLines="1"
-            android:textColor="@color/textItemName"
-            android:textSize="14sp"
+            android:singleLine="true"
+            android:textColor="@color/textLabel"
+            android:textSize="16sp"
             android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/rivAvatar"
-            app:layout_constraintEnd_toStartOf="@+id/tvDate"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rivAvatar"
             app:layout_constraintTop_toTopOf="@+id/rivAvatar"
             tools:text="Alberta Bowman Alberta Bow Alberta Bowman Alberta Bowmanman" />
 
-        <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:fontFamily="sans-serif"
-            android:gravity="end"
-            android:textColor="@color/textHintColor"
-            android:textSize="11sp"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toBottomOf="@+id/rivAvatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/rivAvatar"
-            tools:text="22/12/2017" />
 
         <TextView
 
@@ -65,10 +50,70 @@
             android:textColor="@color/textEmailProfile"
             android:textSize="14sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="@+id/tvDate"
+            app:layout_constraintEnd_toEndOf="@+id/tvName"
             app:layout_constraintStart_toStartOf="@+id/tvName"
             app:layout_constraintTop_toBottomOf="@+id/tvName"
             tools:text="Khóa học “ Kỹ năng thuyết trình hiệu quả” của MVV Coaching sẽ trang bị cho người học kỹ năng thuyết trình hiệu quả." />
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/clTime"
+            style="@style/wrapContent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="@+id/tvContent"
+            app:layout_constraintTop_toBottomOf="@+id/tvContent">
+
+            <ImageView
+                android:id="@+id/imgTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_time"
+                 />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/textItemMyCourse"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/imgTime"
+                app:layout_constraintStart_toEndOf="@+id/imgTime"
+                app:layout_constraintTop_toTopOf="@+id/imgTime"
+                tools:text="50 minutes" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/clReply"
+            style="@style/wrapContent"
+            app:layout_constraintBottom_toBottomOf="@+id/clTime"
+            app:layout_constraintEnd_toEndOf="@+id/tvContent"
+            app:layout_constraintStart_toEndOf="@+id/clTime"
+            app:layout_constraintTop_toTopOf="@+id/clTime">
+
+            <ImageView
+                android:id="@+id/imgReply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_reply" />
+
+            <TextView
+                android:id="@+id/tvReply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:layout_marginLeft="8dp"
+                android:textColor="@color/textItemMyCourse"
+                android:textSize="10sp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toBottomOf="@+id/imgReply"
+                app:layout_constraintStart_toEndOf="@+id/imgReply"
+                app:layout_constraintTop_toTopOf="@+id/imgReply"
+                android:text="trả lời" />
+        </android.support.constraint.ConstraintLayout>
 
         <View
             android:id="@+id/view"
@@ -77,8 +122,8 @@
             android:layout_marginTop="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tvContent"
-            app:layout_constraintTop_toBottomOf="@+id/tvContent" />
+            app:layout_constraintStart_toStartOf="@+id/clTime"
+            app:layout_constraintTop_toBottomOf="@+id/clTime" />
     </haiphat.com.bds.nghetuvan.utils.RippleView>
 
 </layout>
