--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -36,17 +36,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rivLogo"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="What You Need To Know About Oil Fondue" />
+            tools:text="What You Need To Know About Oil Fondue What You Need To Know About Oil Fondue" />
 
         <ImageView
             android:id="@+id/imgNewsType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ic_time"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvName"
-            app:layout_constraintTop_toBottomOf="@+id/tvName"
-            android:layout_marginTop="10dp"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <TextView
             android:id="@+id/tvNewsType"
