--- a/app/src/main/res/layout/fragment_news_info.xml
+++ b/app/src/main/res/layout/fragment_news_info.xml
@@ -3,17 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="haiphat.com.bds.nghetuvan.view.HomeActivity"
-        tools:showIn="@layout/app_bar_home">
+    <android.support.v4.widget.NestedScrollView
+        style="@style/matchParent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Chưa có dữ liệu nào cả"/>
+        <org.sufficientlysecure.htmltextview.HtmlTextView
+            android:id="@+id/htmTextInfo"
+            style="@style/matchParent"
 
-    </android.support.constraint.ConstraintLayout>
+            android:text="Chưa có dữ liệu nào cả" />
+
+    </android.support.v4.widget.NestedScrollView>
 </layout>
