--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="haiphat.com.bds.nghetuvan.view.HomeActivity"
-        tools:showIn="@layout/app_bar_home">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvHome"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            style="@style/matchWrap"
+            android:background="@color/colorWhite">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar_layout"
+                style="@style/matchWrap"
+                android:layout_height="200dp"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimary"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/AppTheme.PopupOverlay">
+
+                </android.support.v7.widget.Toolbar>
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="15dp">
+
+                    <TextView
+                        android:id="@+id/tvSell"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Bán"
+                        android:textColor="@color/textLabel"
+                        app:layout_constraintBottom_toBottomOf="@+id/edSearch"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/edSearch" />
+
+                    <EditText
+                        android:id="@+id/edSearch"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_toRightOf="@+id/tvSell"
+                        android:hint="Nhập từ khóa"
+                        android:inputType="text"
+                        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
+                        app:layout_constraintStart_toEndOf="@+id/tvSell"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tvTypeOfRealEstate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Loại bất động sản"
+                        app:layout_constraintStart_toStartOf="@+id/tvSell"
+                        app:layout_constraintTop_toBottomOf="@+id/edSearch" />
+
+                    <TextView
+                        android:id="@+id/tvLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        android:text="vị trí"
+                        app:layout_constraintEnd_toEndOf="@+id/edSearch"
+                        app:layout_constraintStart_toEndOf="@+id/tvTypeOfRealEstate"
+                        app:layout_constraintTop_toTopOf="@+id/tvTypeOfRealEstate" />
+
+                    <TextView
+                        android:id="@+id/tvPrice"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Mức giá"
+                        app:layout_constraintStart_toStartOf="@+id/tvTypeOfRealEstate"
+                        app:layout_constraintTop_toBottomOf="@+id/tvTypeOfRealEstate" />
+
+                    <TextView
+                        android:id="@+id/tvAcreage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:text="Diện tích"
+                        app:layout_constraintEnd_toEndOf="@+id/edSearch"
+                        app:layout_constraintStart_toEndOf="@+id/tvPrice"
+                        app:layout_constraintTop_toTopOf="@+id/tvPrice" />
+
+                    <Button
+                        android:id="@+id/btnSearch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tìm kiếm"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </android.support.constraint.ConstraintLayout>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                style="@style/matchWrap"
+                android:background="@color/colorAccent"
+                app:tabIndicatorColor="@color/colorWhite"
+                app:tabMode="scrollable"
+                app:tabTextAppearance="@style/DetailPressReleaseTabText" />
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
             style="@style/matchParent"
-            android:padding="5dp" />
+            android:background="@color/bgSelectProfile"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    </android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/ln_splash_background"
+            style="@style/matchParent"
+            android:background="@color/colorWhite"
+            android:orientation="horizontal"
+            android:visibility="gone" />
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
